# fleet

./: .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.py
.github/helper/: install.sh  site_config.json
.github/workflows/: lint.yaml  overrides.yaml  pytest.yaml  release.yaml
fleet/: __init__.py  fleet_home.css  fleet_home.html  hooks.py  install.py
fleet/docs/: index.md
fleet/fleet/: calendar.py  traccar.py
fleet/fleet/custom/: driver.json  driving_license_category.json  location.json  timesheet_detail.json  vehicle.json  vehicle_log.json
fleet/fleet/doctype/: __init__.py
fleet/fleet/doctype/geofence_vehicle/: __init__.py  geofence_vehicle.json  geofence_vehicle.py
fleet/fleet/doctype/state/: state.js  state.json  state.py  test_state.py
fleet/fleet/doctype/traccar_integration/: test_traccar_integration.py  traccar_integration.js  traccar_integration.json  traccar_integration.py
fleet/fleet/doctype/vehicle_driver/: vehicle_driver.json  vehicle_driver.py
fleet/fleet/overrides/: address.py  delivery_trip.py  location.py  timesheet.py  vehicle.py
fleet/fleet/workspace/: __init__.py
fleet/fleet/workspace/fleet/: fleet.json
fleet/public/js/: fleet_calendar.js  timesheet.js
fleet/tests/: setup.py  simulate_gps_data.py
fleet/tests/fixtures/: customers.json  locations_and_routes.py  supplier.json  vehicle_logs.json  vehicles.json
